adding required validators

--- a/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.html
+++ b/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.html
@@ -4,22 +4,27 @@
     <mat-form-field appearance="fill">
       <mat-label for="contactName">Contact Name</mat-label>
       <input formControlName="contactName" matInput type="text" />
+      <mat-error *ngIf="contactName.hasError('required')">Contact name is required</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="email">Contact Email</mat-label>
       <input formControlName="contactEmail" matInput type="email" />
+      <mat-error *ngIf="contactEmail.hasError('required')">Contact email is required</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="serviceUnitName">Service Unit Name</mat-label>
       <input formControlName="serviceUnitName" matInput type="text" />
+      <mat-error *ngIf="serviceUnitName.hasError('required')">Service Unit Name is required</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="Address"> Address</mat-label>
       <input formControlName="address" matInput type="text" />
+      <mat-error *ngIf="address.hasError('required')">Address is required</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="phone"> Phone Number</mat-label>
       <input formControlName="phone" matInput type="number" />
+      <mat-error *ngIf="phone.hasError('required')">Phone Number is required</mat-error>
     </mat-form-field>
 
     <div class="service-features">
@@ -30,12 +35,14 @@
           <mat-option value="afeitado">Afeitado</mat-option>
           <mat-option value="tinte">Tinte</mat-option>
         </mat-select>
+        <mat-error *ngIf="serviceType.hasError('required')">Service Type is required</mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill" class="duration">
         <mat-label for="duration"> Duration</mat-label>
         <input formControlName="duration" matInput type="number" />
+        <mat-error *ngIf="duration.hasError('required')">Duration is required</mat-error>
       </mat-form-field>
     </div>
-    <button type="submit" mat-stroked-button color="primary">Next</button>
+    <button type="submit" [disabled]="businessDetailsForm.invalid" mat-stroked-button color="primary">Next</button>
   </form>
 </div>
