--- a/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.html
+++ b/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.html
@@ -5,16 +5,22 @@
       <mat-label for="contactName">Contact Name</mat-label>
       <input formControlName="contactName" matInput type="text" />
       <mat-error *ngIf="contactName.hasError('required')">Contact name is required</mat-error>
+      <mat-error *ngIf="contactName.hasError('minlength')">Contact name should have at least 3 characters</mat-error>
+      <mat-error *ngIf="contactName.hasError('maxlength')">Contact name should have less than 30 characters</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="email">Contact Email</mat-label>
       <input formControlName="contactEmail" matInput type="email" />
       <mat-error *ngIf="contactEmail.hasError('required')">Contact email is required</mat-error>
+      <mat-error *ngIf="contactEmail.hasError('email')">Email must be valid</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="serviceUnitName">Service Unit Name</mat-label>
       <input formControlName="serviceUnitName" matInput type="text" />
       <mat-error *ngIf="serviceUnitName.hasError('required')">Service Unit Name is required</mat-error>
+      <mat-error *ngIf="serviceUnitName.hasError('minlength')"
+        >Service Unit Name should have at least 3 characters</mat-error
+      >
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label for="Address"> Address</mat-label>
@@ -38,11 +44,19 @@
         <mat-error *ngIf="serviceType.hasError('required')">Service Type is required</mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill" class="duration">
-        <mat-label for="duration"> Duration</mat-label>
+        <mat-label for="duration">Minutes Duration</mat-label>
         <input formControlName="duration" matInput type="number" />
         <mat-error *ngIf="duration.hasError('required')">Duration is required</mat-error>
       </mat-form-field>
     </div>
-    <button type="submit" [disabled]="businessDetailsForm.invalid" mat-stroked-button color="primary">Next</button>
+    <button
+      type="submit"
+      (click)="saveData()"
+      [disabled]="businessDetailsForm.invalid"
+      mat-stroked-button
+      color="primary"
+    >
+      Next
+    </button>
   </form>
 </div>
