--- a/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.scss
+++ b/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.scss
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
     margin: 18px auto;
+    button {
+      margin-top: 5px;
+    }
   }
   .service-features {
     display: flex;
