Removing form module and changing the button to mat-raised

--- a/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.html
+++ b/projects/tu-cita/src/app/components/back-office/business-details/business-details.component.html
@@ -53,7 +53,7 @@
       type="submit"
       (click)="saveData()"
       [disabled]="businessDetailsForm.invalid"
-      mat-stroked-button
+      mat-raised-button
       color="primary"
     >
       Next
