Styling the search-by-area component

--- a/projects/mercat-kzero-web/src/app/views/global-area/global-area/global-area.component.html
+++ b/projects/mercat-kzero-web/src/app/views/global-area/global-area/global-area.component.html
@@ -22,9 +22,12 @@
             <mat-icon aria-label="Side nav toggle icon" class="icon">menu</mat-icon>
           </button>
         </ng-container>
-        <app-header-logo></app-header-logo>
+        <app-header-logo class="logo"></app-header-logo>
+        <app-serach-by-area></app-serach-by-area>
         <span class="flex-spacer"></span>
         <div class="global-widgets">
+          <div class="menu">SignUp</div>
+          <div class="menu">LogIn</div>
           <app-header-cart></app-header-cart>
           <app-header-language-selector></app-header-language-selector>
         </div>
