Adding your role component

--- a/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.html
+++ b/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.html
@@ -1,6 +1,9 @@
 <section class="description">
   <app-description></app-description>
 </section>
+<section>
+  <app-your-role></app-your-role>
+</section>
 <section class="provider">
   <div class="information-content">
     <p i18n class="category">KZero farms and sellers</p>
