Doing header responsive

--- a/projects/mercat-kzero-web/src/app/views/global-area/global-area/global-area.component.html
+++ b/projects/mercat-kzero-web/src/app/views/global-area/global-area/global-area.component.html
@@ -23,13 +23,13 @@
           </button>
         </ng-container>
         <app-header-logo class="logo"></app-header-logo>
-        <app-serach-by-area></app-serach-by-area>
+        <app-serach-by-area class="search"></app-serach-by-area>
         <span class="flex-spacer"></span>
         <div class="global-widgets">
           <div class="menu">SignUp</div>
           <div class="menu">LogIn</div>
-          <app-header-cart></app-header-cart>
-          <app-header-language-selector></app-header-language-selector>
+          <app-header-cart class="cart"></app-header-cart>
+          <app-header-language-selector class="language"></app-header-language-selector>
         </div>
       </mat-toolbar-row>
     </mat-toolbar>
