--- a/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.scss
+++ b/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   overflow: auto;
-  height: calc(100vh - 64px);
+  height: 100vh;
 
   section {
     width: 100%;
@@ -35,7 +35,7 @@
     section {
       flex-direction: row;
       height: 100%;
-      position: sticky;
+      // position: sticky;
       top: 0;
 
       &.provider {
