--- a/projects/mercat-kzero-web/src/app/views/your-role/your-role.component.html
+++ b/projects/mercat-kzero-web/src/app/views/your-role/your-role.component.html
@@ -1,1 +1,10 @@
-<p>your-role works!</p>
+<mat-card class="seller">
+  <mat-card-title>Publish your farm</mat-card-title>
+  <mat-card-subtitle>Sell your 1st quality products.</mat-card-subtitle>
+  <mat-card-actions><button mat-button>LIKE</button></mat-card-actions>
+</mat-card>
+<mat-card class="buyer">
+  <mat-card-title>Find a farm</mat-card-title>
+  <mat-card-subtitle>Sell your 1st quality products.</mat-card-subtitle>
+  <mat-card-actions><button mat-button>LIKE</button></mat-card-actions>
+</mat-card>
