Doing description component  responsive

--- a/projects/mercat-kzero-web/src/app/views/description/description/description.component.scss
+++ b/projects/mercat-kzero-web/src/app/views/description/description/description.component.scss
@@ -1,21 +1,27 @@
 :host {
   width: 100%;
   background-color: #f1f1f1;
-  height: 100vh;
   background-size: cover;
-  display: flex;
-  align-items: center;
 
   .description {
+    height: 100vh;
     width: 85%;
     margin: 0 auto;
     padding: 10px 30px;
+    display: flex;
+    align-items: center;
   }
 
   .logo {
     margin-top: 10px;
     width: 100%;
     max-width: 200px;
+  }
+
+  @media screen and (min-width: 600px) {
+    .logo {
+      max-width: 300px;
+    }
   }
 
   @media screen and (min-width: 1024px) {
