Changing the name to role-card-component

--- a/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.html
+++ b/projects/mercat-kzero-web/src/app/views/main-content/main-content/main-content.component.html
@@ -2,7 +2,7 @@
   <app-description></app-description>
 </section>
 <section>
-  <app-your-role></app-your-role>
+  <app-role-cards></app-role-cards>
 </section>
 <section class="provider">
   <div class="information-content">
