--- a/projects/mercat-kzero-web/src/app/views/role-cards/role-cards.component.scss
+++ b/projects/mercat-kzero-web/src/app/views/role-cards/role-cards.component.scss
@@ -19,11 +19,11 @@
       font-size: 25px;
     }
 
-    &.seller {
+    &.roleCardSeller {
       background-color: blue;
     }
 
-    &.buyer {
+    &.roleCardBuyer {
     }
   }
 }
