--- a/projects/mercat-kzero-web/src/app/views/role-cards/role-cards.component.html
+++ b/projects/mercat-kzero-web/src/app/views/role-cards/role-cards.component.html
@@ -1,10 +1,10 @@
 <mat-card class="roleCardSeller">
   <mat-card-title>Publish your farm</mat-card-title>
   <mat-card-subtitle>Sell your 1st quality products.</mat-card-subtitle>
-  <mat-card-actions><button mat-button>LIKE</button></mat-card-actions>
+  <mat-card-actions><button class="button seller-button" mat-flat-button>Start Now</button></mat-card-actions>
 </mat-card>
 <mat-card class="roleCardBuyer">
   <mat-card-title>Find a farm</mat-card-title>
-  <mat-card-subtitle>Sell your 1st quality products.</mat-card-subtitle>
-  <mat-card-actions><button mat-button>LIKE</button></mat-card-actions>
+  <mat-card-subtitle>Chose a seller and buy safely</mat-card-subtitle>
+  <mat-card-actions><button class="button buyer-button" mat-flat-button>Find Now</button></mat-card-actions>
 </mat-card>
