--- a/projects/mercat-kzero-web/src/app/views/role-cards/role-cards.component.scss
+++ b/projects/mercat-kzero-web/src/app/views/role-cards/role-cards.component.scss
@@ -1,29 +1,115 @@
 :host {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
-  width: 85%;
 
   .mat-card {
-    width: 35%;
-    height: 60%;
+    margin-top: 30px;
+    width: 250px;
+    height: 250px;
     border-radius: 15px;
 
     .mat-card-title {
-      padding: 30px;
-      font-size: 30px;
+      padding: 16px;
+      font-size: 24px;
+      line-height: 1;
     }
 
     .mat-card-subtitle {
-      padding: 30px;
-      font-size: 25px;
+      padding: 16px;
+      font-size: 18px;
+      line-height: 1;
     }
 
     &.roleCardSeller {
-      background-color: blue;
+      background-color: #f9908e;
     }
 
     &.roleCardBuyer {
+      background-color: #dce174;
+    }
+
+    .mat-card-actions {
+      display: flex;
+      justify-content: center;
+    }
+
+    .buyer-button {
+      background-color: #d7e037;
+      margin: 20px 0;
+      color: white;
+    }
+
+    .seller-button {
+      background-color: #ff5e5b;
+      margin: 20px;
+      color: white;
+    }
+  }
+}
+
+@media screen and (min-width: 600px) {
+  :host {
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
+
+    .mat-card {
+      width: 300px;
+      height: 300px;
+      border-radius: 15px;
+
+      .mat-card-title {
+        padding: 16px;
+        font-size: 24px;
+        line-height: 1;
+      }
+
+      .mat-card-subtitle {
+        padding: 16px;
+        font-size: 20px;
+        line-height: 1;
+      }
+
+      .mat-card-actions {
+        margin-top: 60px;
+        .button {
+          padding: 6px;
+          font-size: 20px;
+          width: 150px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  :host {
+    .mat-card {
+      width: 400px;
+      height: 400px;
+      border-radius: 15px;
+
+      .mat-card-title {
+        padding: 16px;
+        font-size: 32px;
+        line-height: 1;
+      }
+
+      .mat-card-subtitle {
+        padding: 16px;
+        font-size: 28px;
+        line-height: 1;
+      }
+
+      .mat-card-actions {
+        margin-top: 100px;
+        .button {
+          padding: 10px;
+          font-size: 28px;
+          width: 200px;
+        }
+      }
     }
   }
 }
